# cash-pilot

./: .editorconfig  .env.backup.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_DEMO.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_README.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  babel.cfg  commit_message.txt  docker-compose.yml  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.dev.txt  tailwind.config.js
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: ci-job.yml  ci.yml
alembic/: env.py
alembic/versions/: 011704d3b342_initial_setup.py  028e5ee441f3_add_users_table.py  08fb5e4498e4_add_has_conflict_field.py  0a6752260382_add_credit_sales_tracking.py  0aecd178ff02_add_audit_fields.py  1627e73675db_simplify_session_status_to_string.py  177c7c63f10a_add_cashier_id_to_cash_sessions.py  18d57c4c9eab_add_line_items.py  1dcc0e9e2231_create_user_business_table.py  1eb24aa32aa5_add_expenses_field_and_net_earnings.py  26ff4c269c7e_drop_cashier_name_from_cash_sessions.py  3af50337336d_add_user_role_and_names.py  3b483782802e_add_movements_table.py  49e171c2e037_add_username_column.py  5714760ead58_add_cashier_id_to_cash_sessions_and_.py  5a4d88718d86_add_business_cash_sessions_relationship.py  68c3404d57c9_add_cashiers_json_to_businesses.py  694f30c6894f_add_session_number_column.py  69c7967bad4c_add_business_cash_sessions_relationship.py  85f44c4614fb_add_created_by_to_cash_sessions.py  8a158621c80e_add_business_table.py  8bbddfd667b9_add_soft_delete_cash_session.py  9f3c2a80132a_add_categories_table.py  add_transfer_verification.py  (+21 more)
docs/: DOCUMENTATION_AUDIT_SUMMARY.md  DOCUMENTATION_REVIEW_FEB2026.md  README.md  architecture-decisions.md  backup_restore.md  business_stats_audit.md  design_readme.md  w7-compatibility.md
scripts/: backup_db.sh  backup_production.sh  restore_db.sh  restore_production.sh  restore_to_local.sh  restore_to_railway.sh
static/: robots.txt  site.webmanifest
templates/: base.html  index.html  login.html  settings.html
tests/: conftest.py  factories.py  test_admin.py  test_admin_business_assignment.py  test_auth.py  test_business.py  test_business_cashiers.py  test_business_frontend.py  test_cash_session.py  test_cash_session_edit.py  test_cashier_timeout.py  test_categories.py  test_close_session_form_validation.py  test_daily_reconciliation.py  test_daily_revenue_report.py  test_dashboard_payment_mix.py  test_date_validation.py  test_edit_closed_session_form.py  test_edit_open_session_form.py  test_envelope_date_range_report.py  test_expense_items_date_range_report.py  test_export_sessions.py  test_flagged_sessions_report.py  test_health.py  test_insights.py  test_logging_and_errors.py  test_movements.py  test_numeric_overflow_prevention.py  test_parse_currency.py  test_rbac.py  test_rbac_dashboard_visibility.py  test_reconciliation_properties.py  test_report_utils.py  test_schema_validation.py  test_sentry_filter.py  test_session_conflicts.py  test_session_flagging.py  test_session_form_rbac.py  test_settings.py  test_timezone_support.py  (+8 more)
translations/: messages.pot
(+189 files in other folders)
