# File: pyproject.toml
# Updated dependencies section

[project]
name = "cashpilot"
version = "0.1.0"
description = "CashPilot – backend base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "watchfiles==0.22.0",
    "alembic==1.13.3",
    "sqlalchemy==2.0.35",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "ruff==0.6.9",
    "isort==5.13.2",
    "pytest==8.3.2",
    "httpx==0.27.0",
    "pytest-asyncio==0.24.0",
    "freezegun==1.5.1",
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
  \.git
| \.venv
| \.mypy_cache
| \.ruff_cache
| build
| dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E203"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
