# File: pyproject.toml
# Updated with Jinja2 for template rendering

[project]
name = "cashpilot"
version = "0.1.0"
description = "CashPilot – backend base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core framework
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "starlette>=0.37.0",

    # Database
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",

    # Authentication & Security
    "PyJWT==2.10.1",
    "pwdlib[argon2]==0.2.1",
    "itsdangerous==2.1.2",

    # Frontend & Templates
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",

    # Utilities
    "structlog==24.4.0",
    "babel==2.14.0",
    "watchfiles==0.22.0",
    "sentry-sdk>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "ruff==0.6.9",
    "isort==5.13.2",
    "pytest==8.3.2",
    "httpx==0.27.0",
    "pytest-asyncio==0.24.0",
    "freezegun==1.5.1",
    "pillow>=11.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
  \.git
| \.venv
| \.mypy_cache
| \.ruff_cache
| build
| dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "C901"]
ignore = ["E203", "C901"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
    "ignore::DeprecationWarning:starlette.templating",
]
